CLEANFILES = $(strings_DATA)
EXTRA_DIST = $(strings_DATA)
stringsdir = $(ABIWORD_DATADIR)/strings

strings_DATA = \
	af-ZA.strings \
	am-ET.strings \
	ar.strings \
	ast-ES.strings \
	ayc-BO.strings \
	aym-BO.strings \
	be-BY.strings \
	be@latin.strings \
	bg-BG.strings \
	br-FR.strings \
	ca-ES.strings \
	cs-CZ.strings \
	cy-GB.strings \
	da-DK.strings \
	de-CH.strings \
	de-DE.strings \
	el-GR.strings \
	en-AU.strings \
	en-CA.strings \
	en-GB.strings \
	en-IE.strings \
	eo.strings \
	es-ES.strings \
	es-MX.strings \
	et.strings \
	eu-ES.strings \
	ff.strings \
	fi-FI.strings \
	fr-FR.strings \
	ga-IE.strings \
	gl.strings \
	he-IL.strings \
	hr-HR.strings \
	hu-HU.strings \
	id-ID.strings \
	it-IT.strings \
	ja-JP.strings \
	jbo.strings \
	kk-KZ.strings \
	ko.strings \
	ku.strings \
	lt-LT.strings \
	lv-LV.strings \
	mg-MG.strings \
	mk-MK.strings \
	mnk-SN.strings \
	ms-MY.strings \
	nb-NO.strings \
	ne-NP.strings \
	nl-NL.strings \
	nn-NO.strings \
	pl-PL.strings \
	ps.strings \
	pt-BR.strings \
	pt-PT.strings \
	quh-BO.strings \
	qul-BO.strings \
	ro-RO.strings \
	ru-RU.strings \
	sc-IT.strings \
	sk-SK.strings \
	sl-SI.strings \
	sq-AL.strings \
	sr@latin.strings \
	sr.strings \
	sv-SE.strings \
	ta-IN.strings \
	tr-TR.strings \
	uk-UA.strings \
	vi-VN.strings \
	wo-SN.strings \
	yi.strings \
	zh-CN.strings \
	zh-HK.strings \
	zh-TW.strings 

af-ZA.strings: af-ZA.po
	perl ui-backport.pl af-ZA
am-ET.strings: am-ET.po
	perl ui-backport.pl am-ET
ar.strings: ar.po
	perl ui-backport.pl ar
ast-ES.strings: ast-ES.po
	perl ui-backport.pl ast-ES
ayc-BO.strings: ayc-BO.po
	perl ui-backport.pl ayc-BO
aym-BO.strings: aym-BO.po
	perl ui-backport.pl aym-BO
be-BY.strings: be-BY.po
	perl ui-backport.pl be-BY
be@latin.strings: be@latin.po
	perl ui-backport.pl be@latin
bg-BG.strings: bg-BG.po
	perl ui-backport.pl bg-BG
br-FR.strings: br-FR.po
	perl ui-backport.pl br-FR
ca-ES.strings: ca-ES.po
	perl ui-backport.pl ca-ES
cs-CZ.strings: cs-CZ.po
	perl ui-backport.pl cs-CZ
cy-GB.strings: cy-GB.po
	perl ui-backport.pl cy-GB
da-DK.strings: da-DK.po
	perl ui-backport.pl da-DK
de-CH.strings: de-CH.po
	perl ui-backport.pl de-CH
de-DE.strings: de-DE.po
	perl ui-backport.pl de-DE
el-GR.strings: el-GR.po
	perl ui-backport.pl el-GR
en-AU.strings: en-AU.po
	perl ui-backport.pl en-AU
en-CA.strings: en-CA.po
	perl ui-backport.pl en-CA
en-GB.strings: en-GB.po
	perl ui-backport.pl en-GB
en-IE.strings: en-IE.po
	perl ui-backport.pl en-IE
eo.strings: eo.po
	perl ui-backport.pl eo
es-ES.strings: es-ES.po
	perl ui-backport.pl es-ES
es-MX.strings: es-MX.po
	perl ui-backport.pl es-MX
et.strings: et.po
	perl ui-backport.pl et
eu-ES.strings: eu-ES.po
	perl ui-backport.pl eu-ES
ff.strings: ff.po
	perl ui-backport.pl ff
fi-FI.strings: fi-FI.po
	perl ui-backport.pl fi-FI
fr-FR.strings: fr-FR.po
	perl ui-backport.pl fr-FR
ga-IE.strings: ga-IE.po
	perl ui-backport.pl ga-IE
gl.strings: gl.po
	perl ui-backport.pl gl
he-IL.strings: he-IL.po
	perl ui-backport.pl he-IL
hr-HR.strings: hr-HR.po
	perl ui-backport.pl hr-HR
hu-HU.strings: hu-HU.po
	perl ui-backport.pl hu-HU
id-ID.strings: id-ID.po
	perl ui-backport.pl id-ID
it-IT.strings: it-IT.po
	perl ui-backport.pl it-IT
ja-JP.strings: ja-JP.po
	perl ui-backport.pl ja-JP
jbo.strings: jbo.po
	perl ui-backport.pl jbo
kk-KZ.strings: kk-KZ.po
	perl ui-backport.pl kk-KZ
ko.strings: ko.po
	perl ui-backport.pl ko
ku.strings: ku.po
	perl ui-backport.pl ku
lt-LT.strings: lt-LT.po
	perl ui-backport.pl lt-LT
lv-LV.strings: lv-LV.po
	perl ui-backport.pl lv-LV
mg-MG.strings: mg-MG.po
	perl ui-backport.pl mg-MG
mk-MK.strings: mk-MK.po
	perl ui-backport.pl mk-MK
mnk-SN.strings: mnk-SN.po
	perl ui-backport.pl mnk-SN
ms-MY.strings: ms-MY.po
	perl ui-backport.pl ms-MY
nb-NO.strings: nb-NO.po
	perl ui-backport.pl nb-NO
ne-NP.strings: ne-NP.po
	perl ui-backport.pl ne-NP
nl-NL.strings: nl-NL.po
	perl ui-backport.pl nl-NL
nn-NO.strings: nn-NO.po
	perl ui-backport.pl nn-NO
pl-PL.strings: pl-PL.po
	perl ui-backport.pl pl-PL
ps.strings: ps.po
	perl ui-backport.pl ps
pt-BR.strings: pt-BR.po
	perl ui-backport.pl pt-BR
pt-PT.strings: pt-PT.po
	perl ui-backport.pl pt-PT
quh-BO.strings: quh-BO.po
	perl ui-backport.pl quh-BO
qul-BO.strings: qul-BO.po
	perl ui-backport.pl qul-BO
ro-RO.strings: ro-RO.po
	perl ui-backport.pl ro-RO
ru-RU.strings: ru-RU.po
	perl ui-backport.pl ru-RU
sc-IT.strings: sc-IT.po
	perl ui-backport.pl sc-IT
sk-SK.strings: sk-SK.po
	perl ui-backport.pl sk-SK
sl-SI.strings: sl-SI.po
	perl ui-backport.pl sl-SI
sq-AL.strings: sq-AL.po
	perl ui-backport.pl sq-AL
sr@latin.strings: sr@latin.po
	perl ui-backport.pl sr@latin
sr.strings: sr.po
	perl ui-backport.pl sr
sv-SE.strings: sv-SE.po
	perl ui-backport.pl sv-SE
ta-IN.strings: ta-IN.po
	perl ui-backport.pl ta-IN
tr-TR.strings: tr-TR.po
	perl ui-backport.pl tr-TR
uk-UA.strings: uk-UA.po
	perl ui-backport.pl uk-UA
vi-VN.strings: vi-VN.po
	perl ui-backport.pl vi-VN
wo-SN.strings: wo-SN.po
	perl ui-backport.pl wo-SN
yi.strings: yi.po
	perl ui-backport.pl yi
zh-CN.strings: zh-CN.po
	perl ui-backport.pl zh-CN
zh-HK.strings: zh-HK.po
	perl ui-backport.pl zh-HK
zh-TW.strings: zh-TW.po
	perl ui-backport.pl zh-TW
