EXTRA_DIST = $(strings_DATA)
stringsdir = $(ABIWORD_DATADIR)/strings

UIBACKPORT = $(srcdir)/ui-backport.pl

strings_DATA = \
	ach.strings \
	af-ZA.strings \
	ak.strings \
	am-ET.strings \
	ar.strings \
	ast-ES.strings \
	ayc-BO.strings \
	aym-BO.strings \
	be-BY.strings \
	be@latin.strings \
	bg-BG.strings \
	bm.strings \
	bn.strings \
	br-FR.strings \
	bs.strings \
	ca-ES.strings \
	ca@valencia.strings \
	cgg.strings \
	cs-CZ.strings \
	cy-GB.strings \
	da-DK.strings \
	de-CH.strings \
	de-DE.strings \
	el-GR.strings \
	en-AU.strings \
	en-CA.strings \
	en-GB.strings \
	en-IE.strings \
	eo.strings \
	es-ES.strings \
	es-MX.strings \
	et.strings \
	eu-ES.strings \
	fa-AF.strings \
	ff.strings \
	fi-FI.strings \
	fil.strings \
	fr-FR.strings \
	ga-IE.strings \
	gl.strings \
	he-IL.strings \
	hi.strings \
	hr-HR.strings \
	hu-HU.strings \
	id-ID.strings \
	it-IT.strings \
	ja-JP.strings \
	jbo.strings \
	kk-KZ.strings \
	km.strings \
	ko.strings \
	ku.strings \
	lg.strings \
	lt-LT.strings \
	lv-LV.strings \
	mg-MG.strings \
	mk-MK.strings \
	mnk-SN.strings \
	ms-MY.strings \
	nb-NO.strings \
	ne-NP.strings \
	nl-NL.strings \
	nn-NO.strings \
	pl-PL.strings \
	ps.strings \
	pt-BR.strings \
	pt-PT.strings \
	quh-BO.strings \
	qul-BO.strings \
	quz.strings \
	ro-RO.strings \
	ru-RU.strings \
	sc-IT.strings \
	sk-SK.strings \
	sl-SI.strings \
	son.strings \
	sq-AL.strings \
	sr@latin.strings \
	sr.strings \
	sv-SE.strings \
	sw.strings \
	ta-IN.strings \
	th.strings \
	tr-TR.strings \
	uk-UA.strings \
	vi-VN.strings \
	wo-SN.strings \
	yi.strings \
	zh-CN.strings \
	zh-HK.strings \
	zh-TW.strings \
	zu.strings

.po.strings:
	@$(UIBACKPORT) $< $@
